--- a/manifest.json
+++ b/manifest.json
@@ -11,19 +11,19 @@
     {
       "src": "./icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "icon-192/png",
       "purpose": "any"
     },
     {
       "src": "./icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "icon-512/png",
       "purpose": "any"
     },
     {
       "src": "./icon-maskable-192.png",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "icon-192/png",
       "purpose": "maskable"
     },
     {
@@ -39,3 +39,4 @@
   "scope": "./",
   "prefer_related_applications": false
 }
+
